--- a/home/templates/business.html
+++ b/home/templates/business.html
@@ -6,7 +6,8 @@
 <div class="business_wrap">
     <div class="business_main">
         <div class="b_intro_txt">
-            젊은 암 경험자를 지원, 소통하는 국내 최초 비영리 기관
+            젊은 암 경험자를 지원, 소통하는<br>
+            국내 최초 비영리 기관
         </div>
         <img src="/static/img/business_2.jpg" class="img-fluid" alt="Responsive image">
         
@@ -34,13 +35,17 @@
             <strong class="bc_t">암 경험자간 소통 모임 기획 및 지원</strong>
             <p>젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적 안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수 있도록 돕습니다. (2020년도는 코로나19로 비대면 모임으로 대체) </p>
         </div>
-        <div class="b_cont b_cont_bot">
+        <div class="b_cont b_cont2">
             <strong class="bc_t">의학, 치료제 관련 의학 세미나 개최</strong>
             <p>똑똑한 투병생활 및 치료 결정과정에서 환자 본인이 배제되지 않도록 연 1회 특정 암 질환에 대한 발병원인 및 임상 실험 결과 등에 대한 세미나를 진행하며, 대학병원 등과의 협력도 진행할 예정입니다.</p>
         </div>
+        <div class="b_cont b_cont_bot">
+            <strong class="bc_t">온라인/오프라인 홍보 브로셔 발간</strong>
+            <p>젊은 암 경험자를 위한 예방, 치료, 회복에 관한 출판, 교육, 홍보 등의 사업을 수행합니다.</p>
+        </div>
     </div>
     <!--//b_cont_wrap-->
-    <div class="clear_both"></div>
+    <div class="clear_both">x</div>
 </div>
 <!--//business_wrap-->
 
