--- a/home/templates/business.html
+++ b/home/templates/business.html
@@ -19,7 +19,7 @@
         <div class="b_cont">
             <strong class="bc_t">여행버킷챌린지 ‘앎’ 캠페인</strong>
             <p>암투병 중인 환자가 완치 후 가고싶은 해외여행지를 설정, 달성 시 동행 및 여행경비 지원합니다. 암 투병 중이거나 추적 검사 중인 암 경험자들에게 질병을 극복할 수 있다는 자신감을 부여하고, 젊은 암 경험자들에 대한 인식 개선을 위한 캠페인입니다.</p>
-            <button type="button" class="btn btn-outline-dark">캠페인 보기 ></button>
+            <div><a href="{% url 'event' %}"><button type="button" class="btn btn-outline-dark">캠페인 보기 ></button></a></div>
         </div>
         <div class="b_cont b_cont_bot">
             <strong class="bc_t">유튜브 채널 '또또봄tv' 운영 </strong>
@@ -33,10 +33,130 @@
         <div class="b_cont b_cont_top">
             <strong class="bc_t">암 경험자간 소통 모임 기획 및 지원</strong>
             <p>젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적 안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수 있도록 돕습니다. (2020년도는 코로나19로 비대면 모임으로 대체) </p>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#exampleModal">
+            재능기부 클래스  >
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                <div class="modal-body">
+                    <!-- Carousel -->
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                            <img src="/static/img/event/class.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/class1.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/class2.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/class3.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/class4.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/class5.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/class7.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/class8.jpg" class="d-block w-100" alt="...">
+                            </div>
+
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                    <!-- //Carousel -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+                </div>
+            </div>
+            </div>
+            <!--//modal-->
         </div>
-        <div class="b_cont b_cont_bot">
+        <div class="b_cont b_cont2">
             <strong class="bc_t">의학, 치료제 관련 의학 세미나 개최</strong>
             <p>똑똑한 투병생활 및 치료 결정과정에서 환자 본인이 배제되지 않도록 연 1회 특정 암 질환에 대한 발병원인 및 임상 실험 결과 등에 대한 세미나를 진행하며, 대학병원 등과의 협력도 진행할 예정입니다.</p>
+        </div>
+
+        <div class="b_cont b_cont_bot">
+            <strong class="bc_t">힐링 콘서트</strong>
+            <p>2030 암환우를 위한 Love Concert를 개최하고 수익금은 또봄 또는 2030 암환우를 돕는 단체에 기증합니다.</p>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#exampleModal1">
+            행사 포스터  >
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                <div class="modal-body">
+                    <!-- Carousel -->
+                    <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                            <img src="/static/img/event/event_poster.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/event_poster1.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/event_poster2.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/event_poster3.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                    <!-- //Carousel -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+                </div>
+            </div>
+            </div>
+            <!--//modal-->
         </div>
     </div>
     <!--//b_cont_wrap-->
