--- a/home/templates/news.html
+++ b/home/templates/news.html
@@ -8,31 +8,32 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="card-deck md-3">
-    <div class="card">
-        <img class="card-img-top img-responsive" src="https://dimg.donga.com/ugc/CDB/SHINDONGA/Article/5e/32/7b/fc/5e327bfc0545d2738de6.jpg" alt="" >
-        <div class="card-body">
-            <!--a 태그 안 href 는 해당 뉴스 홈페이지로 이동할수 있도록 -->
-            <a href="#"><h5 class="card-title">젊은 암 환자의 소망 “해외여행 가봤으면…”</h5></a>
-            <p class="card-text"> [암 환자는 내 곁에 있다 ②] 또봄, 2030 암 생존자 여행을 꾸리다[암 환자는 내 곁에 있다 ②] 또봄, 2030 암 생존자 여행을 꾸리다</p>
-            <p class="card-text"><small class="text-muted">신동아</small></p>
-        </div>
-    </div>
-    <div class="card">
-        <img class="card-img-top img-responsive" src="http://cdn.kormedi.com/wp-content/uploads/2018/12/181220_living2.jpg" alt="Card image cap">
+<div class="container">
+    <div class="card-deck md-3">
+        <div class="card">
+            <img class="card-img-top img-responsive" src="https://dimg.donga.com/ugc/CDB/SHINDONGA/Article/5e/32/7b/fc/5e327bfc0545d2738de6.jpg" alt="" >
             <div class="card-body">
-                <a href="#"><h5 class="card-title">“이 법 있으면 병으로 해고된 동료와 함께 싸워요”</h5></a>
-                <p class="card-text">암 경험자 이정훈씨와 동료들이 기댈 수 있는 차별금지법 제41조 1항</p>
-                <p class="card-text"><small class="text-muted">한겨레</small></p>
+                <!--a 태그 안 href 는 해당 뉴스 홈페이지로 이동할수 있도록 -->
+                <a href="#"><h5 class="card-title">젊은 암 환자의 소망 “해외여행 가봤으면…”</h5></a>
+                <p class="card-text"> [암 환자는 내 곁에 있다 ②] 또봄, 2030 암 생존자 여행을 꾸리다[암 환자는 내 곁에 있다 ②] 또봄, 2030 암 생존자 여행을 꾸리다</p>
+                <p class="card-text"><small class="text-muted">신동아</small></p>
             </div>
-    </div>
-    <div class="card">
-        <img class="card-img-top img-responsive" src="http://img.hani.co.kr/imgdb/resize/2019/0729/156427320088_20190729.JPG" alt="Card image cap">
-        <div class="card-body">
-            <a href="#"><h5 class="card-title">암 경험자들의 ‘또, 다시 봄’</h5></a>
-            <p class="card-text">20∼40대 암환자·암 경험자 모임 ‘또봄’에서 만난 5명의 고민과 바람</p>
-            <p class="card-text"><small class="text-muted">한겨레 21 </small></p>
+        </div>
+        <div class="card">
+            <img class="card-img-top img-responsive" src="http://cdn.kormedi.com/wp-content/uploads/2018/12/181220_living2.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <a href="#"><h5 class="card-title">“이 법 있으면 병으로 해고된 동료와 함께 싸워요”</h5></a>
+                    <p class="card-text">암 경험자 이정훈씨와 동료들이 기댈 수 있는 차별금지법 제41조 1항</p>
+                    <p class="card-text"><small class="text-muted">한겨레</small></p>
+                </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top img-responsive" src="http://img.hani.co.kr/imgdb/resize/2019/0729/156427320088_20190729.JPG" alt="Card image cap">
+            <div class="card-body">
+                <a href="#"><h5 class="card-title">암 경험자들의 ‘또, 다시 봄’</h5></a>
+                <p class="card-text">20∼40대 암환자·암 경험자 모임 ‘또봄’에서 만난 5명의 고민과 바람</p>
+                <p class="card-text"><small class="text-muted">한겨레 21 </small></p>
+            </div>
         </div>
     </div>
 </div>
