--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -95,7 +95,7 @@
         <div class="video-content">
           <div class="inner">
             <h1>Welcome to</h1>
-              <p>한국청년암협회</p>
+              <p>한국청년암협회 또봄</p>
                 <p></p>
                   <div class="scroll-icon">
                     <a class="page-scroll" href="#about"><img src="/static/img/main/scroll-icon.png" alt=""></a>
@@ -352,7 +352,7 @@
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="copyright text-center">
               <p>
-                &copy; Copyright <strong>또봄</strong>. All Rights Reserved
+                &copy; Copyright <strong>한국청년암협회또봄</strong>. All Rights Reserved
               </p>
             </div>
           </div>
