--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -53,8 +53,9 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
-    <header style="padding-bottom: 20px;">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light"> <a href="{% url 'home' %}"
+    <header style="margin-bottom: 20px; background-color: #dceff7;">
+        <div class="container">
+        <nav class="navbar navbar-expand-sm navbar-light""> <a href="{% url 'home' %}"
                 class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img src="/static/img/logo.png"
                     alt="또봄 로고" style="width: 100%;"></a>
             <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -72,17 +73,22 @@
                 </ul>
             </div>
         </nav>
+        </div>
     </header>
     {% block content %}
 
     {% endblock %}
 
     <!-- Start Footer bottom Area -->
+    <hr>
     <footer>
         <section id="footer">
             <div class="container">
                 <div class="row text-center">
-                    <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+                    <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5" style="padding-bottom: 30px;">
+                        <p style="font-size:13px">주소 : 서울특별시 강남구 테헤란로 2길 8, 4층 17호(역삼동, 마이워크 스페이스) “한국청년암협회 또봄”<br>
+                        연락처 : 010-9414-4879 | 대표 : 이정훈
+                        </p>
                         <ul class="list-unstyled list-inline social text-center">
                             <li class="list-inline-item"><a href="https:www.facebook.com/iseeua.page" title="페이스북"
                                     target="blank"><i class="fa fa-facebook"></i></a></li>
@@ -92,6 +98,7 @@
                                     href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA" title="유튜브"
                                     target="blank"><i class="fa fa-play"></i></a></li>
                         </ul>
+                        Copyright © 한국청년암협회 또봄 Corp. All rights reserved.
                     </div>
                 </div>
             </div>
