actitive 상단 여백을 없애기위해 <body> style 수정

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -52,10 +52,10 @@
     {% endblock %}
 </head>
 
-<body data-spy="scroll" data-target="#navbar-example">
+<body data-spy="scroll" data-target="#navbar-example" style="padding-top:0;">
     <header style="margin-bottom: 20px; background-color: #dceff7;">
         <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-light""> <a href="{% url 'home' %}"
+        <nav class="navbar navbar-expand-sm navbar-light" style="margin-top: 0;"> <a href="{% url 'home' %}"
                 class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img src="/static/img/logo.png"
                     alt="또봄 로고" style="width: 100%;"></a>
             <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
