비지니스 container로 감싸줌

--- a/home/templates/business.html
+++ b/home/templates/business.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="business_wrap">
+<div class="container">
     <div class="business_main">
         <div class="b_intro_txt">
             젊은 암 경험자를 지원, 소통하는 국내 최초 비영리 기관
@@ -160,8 +160,7 @@
         </div>
     </div>
     <!--//b_cont_wrap-->
-    <div class="clear_both"></div>
 </div>
-<!--//business_wrap-->
+<!--//container-->
 
 {% endblock %}
