--- a/home/templates/event.html
+++ b/home/templates/event.html
@@ -11,53 +11,43 @@
     </head>
     <body>
 
-  <!-- Page Content -->
+  <!--Contents-->
   <div class="container">
-
     <div class="row">
-
-      <!-- Blog Entries Column -->
       <div class="col-md-8">
-
-        <h3 class="my-4">이벤트</h3>
-
-        <!-- Post1 -->
-        <div class="card mb-4">
-          <img class="card-img-top" src="/static/img/event/1-1.png" alt="Card image cap">
-          <div class="card-body">
-            <h2 class="card-title">암 경험자간 소통 모임 기획 및 지원
-            </h2>
-            <p class="card-text">젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적
-                안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수
-                있도록 돕는 일을 합니다.</p>
-            <a href="#" class="btn btn-default" data-target="#modal" data-toggle="modal">자세히 보기 &rarr;</a>
+        <div class="mb-4">
+           <br> <br> <img class="img-top" src="/static/img/event/1-1.png" alt="image cap">
+            <div class="body">
+              <h2 class="title"><br>암 경험자간 소통 모임 기획 및 지원<br></h2>
+              <p class="text">젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적
+                  안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수
+                  있도록 돕는 일을 합니다.</p>
+              <a href="#" class="btn btn-outline-dark" data-target="#modal" data-toggle="modal">자세히 보기 &rarr;</a>
+            </div>  
           </div>
-
-        </div>
-
-        <!-- Post2 -->
-        <div class="card mb-4">
-          <img class="card-img-top" src="/static/img/event/2-1.PNG" alt="Card image cap">
-          <div class="card-body">
-            <h2 class="card-title">여행버킷챌린지 ‘앎’ 캠페인
-            </h2>
-            <p class="card-text">암 투병 중이거나 추적 검사 중인 암 경험자들에게 질병을 극복할 수 있다는
-                자신감을 부여하고, 젊은 암 경험자들에 대한 인식 개선을 위한 캠페인을
-                진행합니다.</p>
-            <a href="#" class="btn btn-default" data-target="#modal1" data-toggle="modal">자세히 보기 &rarr;</a>
+          <hr>
+          <div class="mb-4">
+            <img class="img-top" src="/static/img/event/2-1.PNG" alt="image cap">
+            <div class="body">
+              <h2 class="title"><br>여행버킷챌린지 ‘앎’ 캠페인<br></h2>
+              <p class="text">암 투병 중이거나 추적 검사 중인 암 경험자들에게 질병을 극복할 수 있다는
+                  자신감을 부여하고, 젊은 암 경험자들에 대한 인식 개선을 위한 캠페인을
+                  진행합니다.</p>
+              <a href="#" class="btn btn-outline-dark" data-target="#modal1" data-toggle="modal">자세히 보기 &rarr;</a>
+            </div>            
           </div>
-       
-        </div>
+          <hr>
       </div>
-
      </div>
-    <!-- /.row -->
+  
+     <!--contents modal-->
     <div class="row">
-        <div class="modal" id="modal" tabindex="-1">
+        <div class="modal fade right" id="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        소통 모임 소개                    
+                        소통 모임 소개
+                        <button class="close" data-dismiss="modal">&times;</button>                     
                     </div>
                     <div class="modal-body" style="text-align: center;">
                         월 1 회 개최 (2020 년도는 코로나 19 로 비대면 모임으로 대체)
@@ -70,11 +60,12 @@
     </div>
 
     <div class="row">
-        <div class="modal" id="modal1" tabindex="-1">
+        <div class="modal fade right" id="modal1" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        캠페인 소개                   
+                        캠페인 소개           
+                        <button class="close" data-dismiss="modal">&times;</button>        
                     </div>
                     <div class="modal-body" style="text-align: center;">
                         <p class="card-text"> 투병 중에 있는 환자 본인이 완치 후 가고 싶은 여행지를 본 
@@ -88,18 +79,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-
-
-
-
-
-  </div>
-  <!-- /.container -->
-
-  
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
