map 크기와 간격 수정

--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -6,10 +6,10 @@
     <h2 class="text-center">오시는 길</h1>
         <div class="row" style="padding-top: 20px;">
             <!--지도 시작-->
-            <div class="col-sm-8 col-xs-12">
+            <div class="col-sm-6 col-xs-12" style="max-width: 100%;">
 
                 <div id="daumRoughmapContainer1606110905572"
-                    class="col-sm-8 root_daum_roughmap root_daum_roughmap_landing">
+                    class="root_daum_roughmap root_daum_roughmap_landing">
                 </div>
 
                 <script charset="UTF-8" class="daum_roughmap_loader_script"
