--- a/home/templates/business.html
+++ b/home/templates/business.html
@@ -24,6 +24,64 @@
         <div class="b_cont b_cont_bot">
             <strong class="bc_t">유튜브 채널 '또또봄tv' 운영 </strong>
             <p>젊은 암 경험자 및 역경을 극복한 사람들의 전과 후를 인터뷰한 내용을 영상 제작하여 유튜브 채널을 운영하여, 극복의지를 심어주고, 정보 전달 및 인식개선을 위해 노력합니다.</p>
+        <!-- Button trigger modal -->
+            <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#exampleModal2">
+            또또봄tv  >
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                <div class="modal-body">
+                    <!-- Carousel -->
+                    <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="4"></li>
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="5"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                            <img src="/static/img/event/youtube_img.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/youtube_img1.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/youtube_img2.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/youtube_img3.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/youtube_img4.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="/static/img/event/youtube_img5.jpg" class="d-block w-100" alt="...">
+                            </div>
+
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                    <!-- //Carousel -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+                </div>
+            </div>
+            </div>
+            <!--//modal-->
         </div>            
     </div>
     <div class="b_cont_wrap">    
@@ -34,25 +92,25 @@
             <strong class="bc_t">암 경험자간 소통 모임 기획 및 지원</strong>
             <p>젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적 안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수 있도록 돕습니다. (2020년도는 코로나19로 비대면 모임으로 대체) </p>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#exampleModal">
+            <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#exampleModal3">
             재능기부 클래스  >
             </button>
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                 <div class="modal-body">
                     <!-- Carousel -->
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <div id="carouselExampleIndicators3" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="4"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="5"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="6"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="7"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -81,11 +139,11 @@
                             </div>
 
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators3" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <a class="carousel-control-next" href="#carouselExampleIndicators3" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
@@ -122,18 +180,10 @@
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
-                            <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                             <img src="/static/img/event/event_poster.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                            <img src="/static/img/event/event_poster1.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                            <img src="/static/img/event/event_poster2.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
                             <img src="/static/img/event/event_poster3.png" class="d-block w-100" alt="...">
