게시판 세부사항

--- a/home/templates/board.html
+++ b/home/templates/board.html
@@ -15,11 +15,55 @@
 </table>
 
 <h1>후원자들</h1>
+<form method="POST">
+    {% csrf_token %}
+    <select name="search_option">
+        <option value="writer">이름</option>
+        <option value="phonenum">핸드폰번호</option>
+        <option value="email">이메일</option>
+    {% if search_option == 'writer' %}
+        <option value="writer" selected>이름</option>
+        <option value="phonenum">핸드폰번호</option>
+        <option value="email">이메일</option>
+    {% elif search_option == 'phonenum' %}
+        <option value="writer">이름</option>
+        <option value="phonenum" selected>핸드폰번호</option>
+        <option value="email">이메일</option>
+    {% elif search_option == 'email' %}
+        <option value="writer">이름</option>
+        <option value="phonenum">핸드폰번호</option>
+        <option value="email" selected>이메일</option>
+    {% endif %}
+    </select>
+    <input name="search" value="{{search}}">
+    <input type="submit" value="검색">
+</form>
 <table>
-    {% for list in supportlist %}
-    <ul>
-        <li> {{list.name}} | <span>{{list.phone_number}} | </span><span>{{list.email}} | </span><span>{{list.contents}} | </span><span>{{list.pub_date}}</span></a></li>
-    </ul>
-    {% endfor %}
+    {% for list in supportall %}
+    <tr>
+        <td>{{list.idx}}</td>
+        <td>{{list.name}}</td>
+        <td>{{list.phone_number}}</td>
+        <td>{{list.email}}</td>
+        <td>{{list.contents}}</td>
+    </tr>
+    <tr aria-colspan="7" align="center">
+        <td>
+            {% if start_page >= page_list_size %}
+            <a href="?start={{prev_list}}">[이전]</a>
+            {% endif %}
+            {% autoescape off %}
+            {% for link in links %}
+                {{link}}
+            {% endfor %}
+            {% endautoescape %}
+            {% if total_page > end_page %}
+                <a href="?start={{next_list}}">[다음]</a>
+            {% endif %}
+        </td>
+
+    </tr>
+    {% endfor %}   
 </table>
+
 {% endblock %}
