--- a/home/templates/event.html
+++ b/home/templates/event.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-md-8">
         <div class="mb-4">
-           <br> <br> <img class="img-top" src="/static/img/event/1-1.png" alt="image cap">
+           <br> <br> <img class="img-fluid" class="img-top"  src="/static/img/event/1-1.png" alt="image cap">
             <div class="body">
               <h2 class="title"><br>암 경험자간 소통 모임 기획 및 지원<br></h2>
               <p class="text">젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적
@@ -27,7 +27,7 @@
           </div>
           <hr>
           <div class="mb-4">
-            <img class="img-top" src="/static/img/event/2-1.PNG" alt="image cap">
+            <img   class="img-fluid" class="img-top" src="/static/img/event/2-1.PNG" alt="image cap">
             <div class="body">
               <h2 class="title"><br>여행버킷챌린지 ‘앎’ 캠페인<br></h2>
               <p class="text">암 투병 중이거나 추적 검사 중인 암 경험자들에게 질병을 극복할 수 있다는
@@ -39,8 +39,9 @@
           <hr>
       </div>
      </div>
-  
+    </div>
      <!--contents modal-->
+    <div class="container">
     <div class="row">
         <div class="modal fade right" id="modal" tabindex="-1">
             <div class="modal-dialog">
@@ -51,7 +52,7 @@
                     </div>
                     <div class="modal-body" style="text-align: center;">
                         월 1 회 개최 (2020 년도는 코로나 19 로 비대면 모임으로 대체)
-                        <img src="/static/img/event/1-3.png" alt="" id="image" style="width:471px; height:223px;">
+                        <img class="img-fluid" src="/static/img/event/1-3.png" alt="" id="image" style="width:471px; height:223px;">
                     </div>
                 </div>
             </div>
@@ -74,12 +75,13 @@
                         추적검사 중인 친구들의 버킷리스트를 취합,선발을 통해 여행 버킷 챌린지를
                         시행하고자 합니다.<br>국내의 경우 반기당 1 회, 해외의 경우 연 1 회를 목표로 합니다. 
                         <br>(해당인원의 스토리를 포토북 또는 영상으로 제작하여 바이럴 진행)</p> 
-                        <img src="/static/img/event/2-2.png" alt="" id="image" style="width:395px; height:247px;">
-                        <img src="/static/img/event/2-3.png" alt="" id="image" style="width:379px; height:245px;">
+                        <img class="img-fluid" src="/static/img/event/2-2.png" alt="" id="image" style="width:395px; height:247px;">
+                        <img class="img-fluid" src="/static/img/event/2-3.png" alt="" id="image" style="width:379px; height:245px;">
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
