자잘하게 수정

--- a/home/templates/business.html
+++ b/home/templates/business.html
@@ -76,6 +76,7 @@
                     <!-- //Carousel -->
                 </div>
                 <div class="modal-footer">
+                    <div><a href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA"><button type="button" class="btn btn-outline-dark">Go to Youtube ></button></a></div>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
                 </div>
@@ -163,7 +164,7 @@
             <p>똑똑한 투병생활 및 치료 결정과정에서 환자 본인이 배제되지 않도록 연 1회 특정 암 질환에 대한 발병원인 및 임상 실험 결과 등에 대한 세미나를 진행하며, 대학병원 등과의 협력도 진행할 예정입니다.</p>
         </div>
 
-        <div class="b_cont b_cont_bot">
+        <div class="b_cont b_cont_bot1">
             <strong class="bc_t">힐링 콘서트</strong>
             <p>2030 암환우를 위한 Love Concert를 개최하고 수익금은 또봄 또는 2030 암환우를 돕는 단체에 기증합니다.</p>
             <!-- Button trigger modal -->
