--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="row mb-4 pl-4 pr-4 bg">
         <div class="col">
-          <img src="/static/img/establish_kyca_1.png" >
+          <img src="/static/img/establish_kyca_1.png" class="img-fluid">
         </div>
         <div class="col text-center">
             <h2>“ 미래를 이끌어갈 코어 2030대, 
@@ -74,11 +74,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
 
     <div class="row mb-3">
       <p class="h3 text-secondary">한국청년암협회또봄 CI</p>
