소셜컨텐츠 이미지추가

--- a/home/templates/scontent.html
+++ b/home/templates/scontent.html
@@ -66,7 +66,7 @@
 
 				<!-- Blog Post -->
 				<div class="card mb-4">
-					<img class="card-img-top" src="../img/scont-img-01.png" height="500px" alt="Card image cap">
+					<img class="card-img-top" src="/static/img/scont-img-01.png" height="500px" alt="Card image cap">
 					<div class="card-body">
 						<h2 class="card-title">1화 젊은 사람이 암에 걸렸다고?</h2>
 						<cite title="source title">-혈액암 말기부터 일상까지<br><br></cite>
@@ -83,7 +83,7 @@
 
 				<!-- Blog Post -->
 				<div class="card mb-4">
-					<img class="card-img-top" src="../img/scont-img-02.jpg" height="" alt="Card image cap">
+					<img class="card-img-top" src="/static/img/scont-img-02.png" height="" alt="Card image cap">
 					<div class="card-body">
 						<h2 class="card-title">2화 저는 이미 죽은 사람이었어요</h2>
 						<cite title="source title">-혈액암 말기부터 일상까지<br><br></cite>
@@ -99,7 +99,7 @@
 
 				<!-- Blog Post -->
 				<div class="card mb-4">
-					<img class="card-img-top" src="../img/scont-img-03.jpg" height="" alt="Card image cap">
+					<img class="card-img-top" src="/static/img/scont-img-03.png" height="" alt="Card image cap">
 					<figcaption class="figure-caption">여행버킷북 사진 중</figcaption>
 					<div class="card-body">
 						<h2 class="card-title">3화 다시 살고 싶어 떠난 여행</h2>
