--- a/home/templates/scontent.html
+++ b/home/templates/scontent.html
@@ -1,19 +1,3 @@
-<!DOCTYPE html>
-<html lang="ko">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Social Contents</title>
-	<!-- head style add-->
-	{% load static %}
-
-	<link rel="stylesheet" href="../activity/scontent.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-
-
-</head>
 
 <body>
 	{% extends 'base.html' %}
@@ -191,12 +175,6 @@
 
 
 
-
-
-	<!-- <script>window.jQuery || document.write('<script src="js/jquery-1.10.1.min.js"><\/script>')</script>
-<script src="js/bootstrap.min.js"></script> -->
-
-
-	<!-- end start activity contents -->
+	<!-- end contents -->
 	{% endblock %}
-</body></html>
+</body>
