main(201126_헤더한글로통일수정)

--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -62,19 +62,31 @@
             <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
               <ul class="nav navbar-nav navbar-right">
                 <li class="active">
-                  <a class="page-scroll" href="{% url 'home' %}">Home</a>
+                  <a class="page-scroll" href="{% url 'home' %}">홈</a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="establish">About</a>
+                  <a class="page-scroll" href="establish">설립취지</a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="business">Project</a>
+                  <a class="page-scroll" href="business">사업소개</a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="activity">Activity</a>
+                  <a class="page-scroll" href="news">뉴스</a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="support">support</a>
+                  <a class="page-scroll" href="event">이벤트</a>
+                </li>
+                <li>
+                  <a class="page-scroll" href="activity">활동 모습</a>
+                </li>
+                <li>
+                  <a class="page-scroll" href="scontent">소셜 컨텐츠</a>
+                </li>
+                <li>
+                  <a class="page-scroll" href="support">후원</a>
+                </li>
+                <li>
+                  <a class="page-scroll" href="map">오시는 길</a>
                 </li>
               </ul>
             </div>
