--- a/home/templates/scontent.html
+++ b/home/templates/scontent.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="ko">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>Social Contents</title>
+	<!-- head style add-->
+	{% load static %}
+
+	<link rel="stylesheet" href="../activity/scontent.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+
+
+</head>
 
 <body>
 	{% extends 'base.html' %}
@@ -67,7 +83,7 @@
 
 				<!-- Blog Post -->
 				<div class="card mb-4">
-					<img class="card-img-top" src="/static/img/scont-img-02.png" height="" alt="Card image cap">
+					<img class="card-img-top" src="/static/img/scont-img-02.jpg" height="" alt="Card image cap">
 					<div class="card-body">
 						<h2 class="card-title">2화 저는 이미 죽은 사람이었어요</h2>
 						<cite title="source title">-혈액암 말기부터 일상까지<br><br></cite>
@@ -83,7 +99,7 @@
 
 				<!-- Blog Post -->
 				<div class="card mb-4">
-					<img class="card-img-top" src="/static/img/scont-img-03.png" height="" alt="Card image cap">
+					<img class="card-img-top" src="/static/img/scont-img-03.jpg" height="" alt="Card image cap">
 					<figcaption class="figure-caption">여행버킷북 사진 중</figcaption>
 					<div class="card-body">
 						<h2 class="card-title">3화 다시 살고 싶어 떠난 여행</h2>
@@ -175,6 +191,12 @@
 
 
 
-	<!-- end contents -->
+
+
+	<!-- <script>window.jQuery || document.write('<script src="js/jquery-1.10.1.min.js"><\/script>')</script>
+<script src="js/bootstrap.min.js"></script> -->
+
+
+	<!-- end start activity contents -->
 	{% endblock %}
-</body>
+</body></html>
