base 푸터 색변경 / map mobile시 스크롤 안 생기게 변경

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -81,7 +81,7 @@
 
     <!-- Start Footer bottom Area -->
     <hr>
-    <footer>
+    <footer style="background-color:darkgray; color: #fff;">
         <section id="footer">
             <div class="container">
                 <div class="row text-center">
