--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -9,7 +9,7 @@
             <div class="col-sm-6 col-xs-12" style="max-width: 100%;">
 
                 <div id="daumRoughmapContainer1606110905572"
-                    class="root_daum_roughmap root_daum_roughmap_landing">
+                    class="root_daum_roughmap root_daum_roughmap_landing" style="max-width: 100%;">
                 </div>
 
                 <script charset="UTF-8" class="daum_roughmap_loader_script"
@@ -30,7 +30,7 @@
 
             <!--연락처 및 주소-->
             <div class="col-sm-4 col-xs-12" id="contact2">
-                <h4>후원 문의 및 연락처</h4>
+                <h4 style="padding-top: 10px;">후원 문의 및 연락처</h4>
                 <hr align="left" width="80%">
                 <h5 class="pt-2">주소</h5>
                 서울특별시 강남구 테헤란로 2길 8,<br> 4층 17호(역삼동, 마이워크 스페이스)<br>
@@ -46,5 +46,4 @@
             <!--//연락처 및 주소-->
         </div>
 </div>
-
 {%endblock%}
