--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -54,10 +54,8 @@
                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="card-body">
                             또봄에 후원을 하는 절차를 안내 해 드립니다.<br>
-                            후원 방식은 두 가지 중 선택하시면 됩니다.<br>
-                            또봄에 직접 후원하는 방식, <a href="http://kcscancer.org/" target="blank">대한암협회</a>를 통해 후원하는 방식 두 가지
-                            입니다.<br>
-                            세금공제를 원하시는 분은 <a href="http://kcscancer.org/" target="blank">대한암협회</a>를 통해 후원해주시기 바랍니다.<br>
+                            후원 방식은 저희 또봄 계좌로 .<br>
+                            또봄에 직접 후원하는 방식
                             또봄 후원활동에 감사 드립니다.<br>
                             후원하신 모든 회원께서는 자동으로 후원자로 등록 됨을 알려드립니다.
                         </div>
@@ -81,7 +79,7 @@
                             5. 온라인/오프라인 홍보 브로셔 발간<br>
                             6. 홍보 영상 제작/배포<br>
                             7. 기타 법인의 목적 달성에 필요한 사업 등에 사용됩니다.<br>
-                            자세한 사항은 <a href="http://127.0.0.1:8000/home/business">사업소개</a>에서 보실 수있습니다.
+                            자세한 사항은 <a href="{% url 'business' %}">사업소개</a>에서 보실 수있습니다.
                         </div>
                     </div>
                 </div>
@@ -107,7 +105,7 @@
         </div>
         <!--//아코디언 메뉴-->
         <div class="col-md-6 col-sm-6 col-xs-12">
-            <h5 class="text-center">후원자 정보 기록 및 문의 사항</h5>
+            <h5 class="text-center" style="padding-top: 15px;">후원자 정보 기록 및 문의 사항</h5>
             <form method="POST" name="stip" onsubmit="return checkfrom()">
                 {% csrf_token %}
                 <div class="form-group">
