--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="container">
     <div class="row mb-4 pl-4 pr-4 bg">
-        <div class="col">
+        <div class="col-xs-12">
           <img src="/static/img/establish_kyca_1.png" class="img-fluid">
         </div>
         <div class="col text-center">
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="row">
-      <div class="col text-center mt-3 mb-4">
+      <div class="col-xs-12 text-center mt-3 mb-4">
         <p class="h1 text-success">건강한 당신을 또 보고 싶습니다, I See u Again</p>
       </div>     
     </div>
