--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -11,9 +11,9 @@
 
 {% block content %}
 <div class="container">
-    <div class="row mb-4 pl-4 pr-4 bg">
-        <div class="col-xs-12">
-          <img src="/static/img/establish_kyca_1.png" class="img-fluid">
+    <div class="row mb-4 pl-4 pr-4">
+        <div class="col-xs-12 mb-3">
+          <img src="../static/img/establish_kyca_1.png" class="img-fluid">
         </div>
         <div class="col text-center">
             <h2>“ 미래를 이끌어갈 코어 2030대, 
@@ -24,14 +24,14 @@
         </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 text-center mt-3 mb-4">
+      <div class="col text-center mt-3 mb-4">
         <p class="h1 text-success">건강한 당신을 또 보고 싶습니다, I See u Again</p>
       </div>     
     </div>
     <div class="row">
       <div class="row row-cols-1 row-cols-md-2">
         <div class="col mb-4 ">
-          <div class="card" style="min-height: 300px;">
+          <div class="card mb-5 border-0" style="min-height: 300px;">
               <div class="card-body">
               <h5 class="card-title font-weight-bold">[젊은 암 경험자를 위한 <span class="h3 font-weight-bold">국내 최초</span>]</h5>
               <p class="card-text">
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card" style="min-height: 300px;">
+          <div class="card mb-5 border-0" style="min-height: 300px;">
               <div class="card-body">
               <h5 class="card-title font-weight-bold">[젊은 암 경험자가 <span class="h3 font-weight-bold">직접 만든</span>]</h5>
               <p class="card-text">
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card" style="min-height: 300px;">
+          <div class="card mb-5 border-0" style="min-height: 300px;">
               <div class="card-body">
               <h5 class="card-title font-weight-bold">[젊은 암 경험자에게 <span class="h3 font-weight-bold">필요한</span>]</h5>
               <p class="card-text">
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card" style="min-height: 300px;">
+          <div class="card mb-5 border-0" style="min-height: 300px;">
               <div class="card-body">
               <h5 class="card-title font-weight-bold">[젊은 암 경험자가 <span class="h3 font-weight-bold">살기 좋은</span>]</h5>
               <p class="card-text">
@@ -80,9 +80,9 @@
       <p class="h5 text-secondary pl-4 pr-4">또봄의 로고는 계절을 암 경험자의 주기를 빗대어 각 네모를 계절의 색깔로 표현했으며, 
         이를 이겨내어 새로운 봄, 사계절이 지나 다시 찾아오는 봄처럼 건강하고 행복한 모습을 의미하고 있습니다.</p>
     </div>
-    <div class="row mb-3 border border-success" style="min-width: 610px;">
-        <div class="col pt-2 pb-2 maxwith">
-             <img src="/static/img/img_about02.png" alt="" class="img-responsive">
+    <div class="row mb-3 border border-success pl-2 pr-2" >
+        <div class="col-xs-12 pt-2 pb-2">
+             <img src="/static/img/img_about02.png" alt="" class="img-fluid">
         </div>
         <div class="col pt-2 pb-2">
             <p class="text-secondary">여름 : 암 투병 전 활동적인</p>
