--- a/home/templates/event.html
+++ b/home/templates/event.html
@@ -8,8 +8,8 @@
                 <div class="mb-4">
                     <br>
                     <br>
-                    <img class="img-fluid" class="img-top" src="/static/img/event/class.jpg" alt="image cap" style="width:400px; height:400px;>
-                                            <div class=" body">
+                    <img class="img-fluid" class="img-top" src="/static/img/event/class.jpg" alt="image cap" style="width:400px; height:400px";>
+                    <div class="body">
                     <h2 class="title"><br>암 경험자간 소통 모임 기획 및 지원<br></h2>
                     <p class="text">젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적
                                                                       안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수
@@ -68,9 +68,9 @@
             <div class="modal-body" style="text-align: center;">
                 <p class="card-text">
                     투병 중에 있는 환자 본인이 완치 후 가고 싶은 여행지를 본 법인에
-                                                                    밝히고 질병이 완치 되고, 1 년 후 여행에 동행하는 챌린지 프로그램으로 초기에는
-                                                                    추적검사 중인 친구들의 버킷리스트를 취합,선발을 통해 여행 버킷 챌린지를
-                                                                    시행하고자 합니다.<br>국내의 경우 반기당 1 회, 해외의 경우 연 1 회를 목표로 합니다.
+                    밝히고 질병이 완치 되고, 1 년 후 여행에 동행하는 챌린지 프로그램으로 초기에는
+                    추적검사 중인 친구들의 버킷리스트를 취합,선발을 통해 여행 버킷 챌린지를
+                    시행하고자 합니다.<br>국내의 경우 반기당 1 회, 해외의 경우 연 1 회를 목표로 합니다.
                     <br>(해당인원의 스토리를 포토북 또는 영상으로 제작하여 바이럴 진행)
                 </p>
                 <img class="img-fluid" src="/static/img/event/2.jpg" alt="" id="image" style="width:784px; height:508px;">
