--- a/home/templates/news.html
+++ b/home/templates/news.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="row row-cols-1 row-cols-lg-3">
             <div class="col mb-5">
-                <div class="card">
+                <div class="card border-0">
                     <img class="card-img-top" src="https://dimg.donga.com/ugc/CDB/SHINDONGA/Article/5e/32/7b/fc/5e327bfc0545d2738de6.jpg" alt="" >
                     <div class="card-body">
                         <!--a 태그 안 href 는 해당 뉴스 홈페이지로 이동할수 있도록 -->
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="col mb-5">
-                <div class="card">
+                <div class="card border-0">
                     <img class="card-img-top img-responsive" src="http://cdn.kormedi.com/wp-content/uploads/2018/12/181220_living2.jpg" alt="Card image cap">
                         <div class="card-body">
                             <a href="#"><h5 class="card-title">“이 법 있으면 병으로 해고된 동료와 함께 싸워요”</h5></a>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="col mb-5">
-                <div class="card">
+                <div class="card border-0">
                     <img class="card-img-top img-responsive" src="http://img.hani.co.kr/imgdb/resize/2019/0729/156427320088_20190729.JPG" alt="Card image cap">
                     <div class="card-body">
                         <a href="#"><h5 class="card-title">암 경험자들의 ‘또, 다시 봄’</h5></a>
