--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -81,7 +81,7 @@
 
     <!-- Start Footer bottom Area -->
     <hr>
-    <footer style="background-color:darkgray; color: #fff;">
+    <footer style="background-color:black; color: #fff;">
         <section id="footer">
             <div class="container">
                 <div class="row text-center">
