개인정보입력 form 제거하고 후원절차만 남겨놓음

--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -38,39 +38,29 @@
             <h2>후원 하기</h3>
         </div>
     </div>
-    <div class="row" style="padding-top: 20px;">
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div id="accordion">
-                <div class="card">
+    <div class="row" style="padding-top: 20px; margin-bottom: 60px;">
+                <div class="card col-md-4 col-sm-4 col-xs-12" style="border: 0;">
                     <div class="card-header" id="headingOne">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
-                                aria-expanded="true" aria-controls="collapseOne" style="color:#000;">
-                                후원 절차
-                            </button>
+                        <h5 class="mb-0 text-center">후원 절차
                         </h5>
                     </div>
 
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div id="collapseOne">
                         <div class="card-body">
                             또봄에 후원을 하는 절차를 안내 해 드립니다.<br>
-                            후원 방식은 저희 또봄 계좌로 .<br>
-                            또봄에 직접 후원하는 방식
+                            후원 방식은 저희 또봄 계좌로 보내주시되,<br>
+                            정회원분들께선 '회비계좌'로 후원부탁드리겠습니다.<br>
                             또봄 후원활동에 감사 드립니다.<br>
                             후원하신 모든 회원께서는 자동으로 후원자로 등록 됨을 알려드립니다.
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-md-4 col-sm-4 col-xs-12" style="border: 0;">
                     <div class="card-header" id="headingTwo">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
-                                aria-expanded="false" aria-controls="collapseTwo" style="color:#000;">
-                                후원금 사용처
-                            </button>
+                        <h5 class="mb-0 text-center">후원금 사용처
                         </h5>
                     </div>
-                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                    <div id="collapseTwo">
                         <div class="card-body">
                             1. 암 경험자간 소통 모임 기획 및 지원<br>
                             2. 여행버킷챌린지 ‘앎’ 캠페인<br>
@@ -83,70 +73,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-md-4 col-sm-4 col-xs-12" style="border: 0;">
                     <div class="card-header" id="headingThree">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
-                                aria-expanded="false" aria-controls="collapseThree" style="color:#000;">
-                                후원 계좌
-                            </button>
-                        </h5>
+                        <h5 class="mb-0 text-center">후원 계좌</h5>
                     </div>
-                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                    <div id="collapseThree">
                         <div class="card-body">
                             후원금계좌<br>
-                            sc제일은행 202-20-132734 (사단법인 한국청년암협회 또봄)<br><br>
+                            sc제일은행 202-20-132734<br> (사단법인 한국청년암협회 또봄)<br><br>
                             회비계좌(정회원)<br>
-                            sc제일은행 202-20-132745 (사단법인 한국청년암협회 또봄)
+                            sc제일은행 202-20-132745<br> (사단법인 한국청년암협회 또봄)
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
         <!--//아코디언 메뉴-->
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <h5 class="text-center" style="padding-top: 15px;">후원자 정보 기록 및 문의 사항</h5>
-            <form method="POST" name="stip" onsubmit="return checkfrom()">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="inputName">성명</label>
-                    <input type="text" class="form-control" name="name" id="inputName" placeholder="이름을 입력해 주세요">
-                </div>
-                <div class="form-group">
-                    <label for="inputMobile">연락처</label>
-                    <input type="tel" class="form-control" name="phone_number" id="inputMobile" placeholder="'-'를 포함한 휴대폰번호를 입력해 주세요">
-                </div>
-                <div class="form-group">
-                    <label for="InputEmail">이메일 주소</label>
-                    <input type="email" class="form-control" name="email" id="InputEmail" placeholder="이메일 주소를 입력해주세요">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">내용</label>
-                    <textarea class="form-control" name="contents" id="exampleFormControlTextarea1" placeholder="후원 내용을 입력해주세요"
-                        rows="3"></textarea>
-                </div>
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" name="allow" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">개인정보 수집 동의</label>
-                    <p style="font-size: 13px;">후원자님의 인적사항을 기록하기 위해 또는 문의사항 접수 및 처리를 위해 위와 같이 개인정보를 수집합니다.</p>
-                </div>
-                <div class="form-group text-center">
-                    <button type="submit" id="join-submit" class="btn btn-primary">
-                        보내기<i class="fa fa-check spaceLeft"></i>
-                    </button>
-                    <button type="reset" class="btn btn-warning">
-                        취소<i class="fa fa-times spaceLeft"></i>
-                    </button>
-                </div>
-            </form>
-        </div>
     </div>
     <!--//후원 참여자 정보 기록-->
 </div>
 <!--//후원 컨테이너-->
-<script>
-    function btn(sample) {
-        alert(sample);
-    }
-</script>
 {%endblock%}
