map support 주석 수정

--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -45,5 +45,7 @@
             </div>
             <!--//연락처 및 주소-->
         </div>
+        <!--//row-->
 </div>
+<!--//map container-->
 {%endblock%}
