--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -2,36 +2,6 @@
 {% extends 'base.html' %}
 
 {%block content %}
-<script>
-    function checkphone(inputMobile) {
-         var pattern = /^\d{3}-\d{3,4}-\d{4}$/;
-         return pattern.test(inputMobile)
-    }
-
-    function checkfrom() {
-        if ($.trim($("#inputName").val()) == "") {
-            alert("이름을 입력해주세요")
-            $("#inputName").focus();
-            return false;
-        }
-        if(!checkphone($.trim($("#inputMobile").val()))){
-            alert("연락처를 올바르게 입력해주세요")
-            $("#inputMobile").focus();
-            return false;
-        }
-        if($.trim($("#exampleFormControlTextarea1").val()) == "") {
-            alert("내용을 입력해주세요")
-            $("#exampleFormControlTextarea1").focus();
-            return false;
-        }
-        if (!$("input:checked[id='exampleCheck1']").is(":checked")) {
-            alert("개인정보 수집에 동의해주세요");
-            return false;
-        }
-    
-    }
-
-</script>
 <div class="container">
     <div class="page-header text-center">
         <div class="col-md-12 col-md-offset-3">
@@ -55,6 +25,7 @@
                         </div>
                     </div>
                 </div>
+                <!--//후원 절차-->
                 <div class="card col-md-4 col-sm-4 col-xs-12" style="border: 0;">
                     <div class="card-header" id="headingTwo">
                         <h5 class="mb-0 text-center">후원금 사용처
@@ -73,6 +44,7 @@
                         </div>
                     </div>
                 </div>
+                <!--//후원금 사용처-->
                 <div class="card col-md-4 col-sm-4 col-xs-12" style="border: 0;">
                     <div class="card-header" id="headingThree">
                         <h5 class="mb-0 text-center">후원 계좌</h5>
@@ -86,9 +58,9 @@
                         </div>
                     </div>
                 </div>
-        <!--//아코디언 메뉴-->
+                <!--//후원금 사용처-->
     </div>
-    <!--//후원 참여자 정보 기록-->
+    <!--//후원 row-->
 </div>
 <!--//후원 컨테이너-->
 {%endblock%}
