--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -239,125 +239,156 @@ div#preloader {
 
 /*  2. Header top Area
 /*--------------------------------*/
-
-.header-area {
-  position: absolute;
-  top: 0;
-  left: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+/* custom scroll bar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+::selection{
+  background: rgb(0,123,255,0.3);
+}
+.content{
+  max-width: 1250px;
+  margin: auto;
+  padding: 0 30px;
+}
+.navbar{
+  position: fixed;
   width: 100%;
-  height: 80px;
-  background: rgba(0, 0, 0, 0.40);
-  z-index: 9;
+  z-index: 2;
+  padding: 25px 0;
+  transition: all 0.3s ease;
 }
-
-.navbar-header a.navbar-brand {
-  display: inline-block;
-  height: 70px;
-  padding: 15px 0;
+.navbar.sticky{
+  background: #1b1b1b;
+  padding: 10px 0;
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
 }
-
-.main-menu ul.navbar-nav li {
-  display: inline-block;
-  padding: 0px 13px;
+.navbar .content{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
-.main-menu ul.navbar-nav li a {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+.navbar .logo a{
   color: #fff;
-  font-size: 15px;
+  font-size: 30px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.navbar .menu-list{
+  display: inline-flex;
+}
+.menu-list li{
+  list-style: none;
+}
+.menu-list li a{
+  color: #fff;
+  font-size: 18px;
   font-weight: 500;
-  padding: 24px 0px;
-  text-transform: capitalize;
-  letter-spacing: 1px;
+  margin-left: 25px;
+  text-decoration: none;
+  transition: all 0.3s ease;
 }
-
-.main-menu ul.navbar-nav li.active > a::after {
-  border: 1px solid #fff;
-  bottom: 0px;
-  content: "";
-  left: 0;
+.menu-list li a:hover{
+  color: #007bff;
+}
+.banner{
+  background: url("banner.jpg") no-repeat;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+.about{
+  padding: 30px 0;
+}
+.about .title{
+  font-size: 38px;
+  font-weight: 700;
+}
+.about p{
+  padding-top: 20px;
+  text-align: justify;
+}
+.icon{
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  display: none;
+}
+.menu-list .cancel-btn{
   position: absolute;
-  width: 100%;
+  right: 30px;
+  top: 20px;
+}
+@media (max-width: 1230px) {
+  .content{
+    padding: 0 60px;
+  }
+}
+@media (max-width: 1100px) {
+  .content{
+    padding: 0 40px;
+  }
 }
 
-.main-menu ul.navbar-nav li.active a:hover {
-  background: none;
-  color: #fff;
+@media (max-width: 999px) {
+  body.disabled{
+    overflow: hidden;
+  }
+  .icon{
+    display: block;
+  }
+  .icon.hide{
+    display: none;
+  }
+  .navbar .menu-list{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    max-width: 400px;
+    left: -100%;
+    top: 0px;
+    display: block;
+    padding: 40px 0;
+    text-align: center;
+    background: #222;
+    transition: all 0.3s ease;
+  }
+  .navbar.show .menu-list{
+    left: 0%;
+  }
+  .navbar .menu-list li{
+    margin-top: 45px;
+  }
+  .navbar .menu-list li a{
+    font-size: 23px;
+    margin-left: -100%;
+    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  .navbar.show .menu-list li a{
+    margin-left: 0px;
+  }
+}
+@media (max-width: 380px) {
+  .navbar .logo a{
+    font-size: 27px;
+  }
 }
 
-.main-menu ul.navbar-nav li.active a:focus {
-  color: #fff;
-}
 
-.main-menu ul.navbar-nav li.active a {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  color: #fff;
-  position: relative;
-}
-
-.main-menu ul.navbar-nav li a:hover {
-  color: #3EC1D5;
-}
-
-.navbar {
-  border: medium none;
-  margin-bottom: 0;
-}
-
-.navbar-default {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-}
-
-.main-menu ul.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-  background: none;
-  color: #333;
-}
-
-.navbar-default .navbar-toggle {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: medium none;
-  border-radius: 0;
-  padding: 25px 0px;
-}
-
-.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-  background-color: transparent;
-  color: #fff;
-}
-
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background: none;
-}
-
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: #fff;
-  width: 30px;
-  height: 2px;
-}
-
-.top-right.text-right {
-  float: right;
-  position: relative;
-  top: 24px;
-  margin-left: 20px;
-}
-
-.top-right.text-right>li {
-  float: right;
-  margin: 0px 8px;
-}
-
-.top-right.text-right li a {
-  color: #fff;
-}
-
-.main-menu .dropdown ul {
-  background: #000;
-}
-
-.main-menu .dropdown ul li {
-  display: block;
-}
 #video-container  {
   position: relative;
   width: 100%;
