--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -85,10 +85,10 @@
              <img src="/static/img/img_about02.png" alt="" class="img-fluid">
         </div>
         <div class="col-lg-6 col-md-12">
-            <p class="text-secondary">여름 : 암 투병 전 활동적인</p>
-            <p class="text-secondary">가을 : 암 투병을 하면서 외롭고 고독한</p>
-            <p class="text-secondary">겨울 : 암 투병을 지속되면서 힘들고 지친</p>
-            <p class="text-secondary">봄 : 암 투병을 이겨내고 새롭고, 다시 시작하는</p>
+            <p class="text-secondary mb-1">여름 : 암 투병 전 활동적인</p>
+            <p class="text-secondary mb-1">가을 : 암 투병을 하면서 외롭고 고독한</p>
+            <p class="text-secondary mb-1">겨울 : 암 투병을 지속되면서 힘들고 지친</p>
+            <p class="text-secondary mb-1">봄 : 암 투병을 이겨내고 새롭고, 다시 시작하는</p>
         </div>
     </div>    
 </div>
